--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 ###########################################
 
 # key - AWS Access Key ID
-key: YourKey
+key: YourKeyHere
 # secret - AWS secret access key
 secret: YourSecret
 # region - Region name (e.g. 'us-east-1', 'us-west-1', 'us-west-2', 'eu-west-1', etc...)
