--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "socket.io": "^4.4.0"
   }
 }
