--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "multer": "^1.4.3",
+    "nouislider": "^15.5.0",
     "socket.io": "^4.4.0"
   }
 }
